Correcting for missing flag change in previous commit

--- a/PRyMdemoNP.ipynb
+++ b/PRyMdemoNP.ipynb
@@ -207,6 +207,7 @@
    ],
    "source": [
     "# Vary Weak Rates wrt Born\n",
+    "PRyMini.NP_nu_flag = False\n",
     "PRyMini.NP_nTOp_flag = False\n",
     "PRyMini.compute_nTOp_flag = True # need to recompute weak rates x Born approximation\n",
     "PRyMini.nTOpBorn_flag = True\n",
